# codex-agents-md-plus

./: .gitignore  DEVELOPMENT.md  README.md  justfile  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
plugins/codex-agents-md-plus/.codex-plugin/: plugin.json
plugins/codex-agents-md-plus/hooks/: hooks.json
plugins/codex-agents-md-plus/src/: hook.py
plugins/codex-agents-md-plus/src/agents_md_plus/: config.py  gitworktree.py  hookio.py  instructions.py  main.py  models.py  native_segments.py  nativepull.py  overlay.py  paths.py  reader.py  references.py  refgraph.py  renderer.py  scanroots.py  transcript.py
plugins/codex-agents-md-plus/tests/: test_config.py  test_gitworktree.py  test_instructions.py  test_main.py  test_native_segments.py  test_nativepull.py  test_overlay.py  test_paths.py  test_reader.py  test_references.py  test_refgraph.py  test_renderer.py  test_scanroots.py  test_transcript.py
